Add exhaustive search

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,3 +3,9 @@ add_executable(example example.cpp)
 target_include_directories(example PRIVATE ${FTMR_SRC_DIR})
 
 target_link_libraries(example ftmr)
+
+add_executable(search search_polytree.cpp)
+
+target_include_directories(search PRIVATE ${FTMR_SRC_DIR})
+
+target_link_libraries(search ftmr)
